not yet implemented alert added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input type="text" id="shape" placeholder="Eg: 3 2 4">
 
         <button id="draw-btn">Draw</button>
-        <a href="" download="vis.png" id="download-btn">Download</a>
+        <a href="" download="array-vis.png" id="download-btn">Download</a>
     </div>
 
     <div id="vis-container">
