--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>N-D Array Visualizer</title>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="input-container">
         Shape:
-        <input type="text" id="shape" placeholder="Eg: 3 2 4">
+        <input type="text" id="shape" placeholder="Eg: 5 3 4" value="5 3 4">
 
         <button id="draw-btn">Draw</button>
         <a href="" download="array-vis.png" id="download-btn">Download</a>
