--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <canvas id="vis"></canvas>
     </div>
 
+    <footer>
+        Created by <a href="https://biraj21.netlify.app" target="_blank">Biraj</a>.
+    </footer>
+
     <script src="main.js"></script>
 </body>
 
