--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div id="input-container">
         Shape:
-        <input type="text" id="shape" placeholder="Eg: 3 5 3 3" value="3 5 3 3">
+        <input type="text" id="shape" placeholder="e.g: 3 5 3 3" value="3 5 3 3">
 
         <button id="draw-btn">Draw</button>
         <a href="" download="array-vis.png" id="download-btn">Download</a>
